--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/01. Brainstorming.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/01. Brainstorming.md
@@ -18,7 +18,7 @@
 | ESCP-14 | STK-08      | Seguridad           | Ingreso de datos del usuario                                                     | El sistema incluye autentificacion                 |
 | ESCP-15 | STK-08      | Escalabilidad       | Aumento de alumnos en el ciclo                                                   | El sistema aguanta el ingreso de nuevos alumnos    |
 | ESCP-16 | STK-08      | Interoperabilidad   | Integrar calendario                                                              | Sincronizacion rapida                              |
-| ESCP-17 | STK-09      | Disponibilidad      | Enviar mensajes a los usuarios                                                   | El sistema confirma el envio y lectura del mensaje |
+| ESCP-17 | STK-09      | Fiabilidad          | Enviar mensajes a los usuarios                                                   | El sistema confirma el envio y lectura del mensaje |
 | ESCP-18 | STK-09      | Testeabilidad       | Verificar que el sistema funcione correctamente                                  | Las pruebas son faciles y rapidas                  |
 | ESCP-19 | STK-10      | Mantenibilidad      | Nueva actualizacion del sistema                                                  | Actualizacion rapida y sin interrupciones          |
 | ESCP-20 | STK-10      | Rendimiento         | Monitoreo de los usuarios                                                        | Sin interrupciones en la funcionalidad del sistema |
