--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/02. Consolidacion.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/02. Consolidacion.md
@@ -14,7 +14,7 @@
 | ESC-10       | Usabilidad          | Acceso del nuevo usuario a utilizar el sistema                                   | El sistema muestra una interfaz sencilla de usar   | ESCP-09, ESCP-10, ESCP-22          | Repetido           |
 | ESC-11       | Rendimiento         | Acceso a conversaciones antiguas                                                 | Respuesta rapida del sistema                       | ESCP-11, ESCP-26                   | Repetido           |
 | ESC-12       | Seguridad           | Ingreso de datos del usuario                                                     | El sistema incluye autentificacion                 | ESCP-14                            | Autenticación      |
-| ESC-13       | Disponibilidad      | Enviar mensajes a los usuarios                                                   | El sistema confirma el envio y lectura del mensaje | ESCP-17                            | Confirmación       |
+| ESC-13       | Fiabilidad          | Enviar mensajes a los usuarios                                                   | El sistema confirma el envio y lectura del mensaje | ESCP-17                            | Confirmación       |
 | ESC-14       | Testeabilidad       | Verificar que el sistema funcione correctamente                                  | Las pruebas son faciles y rapidas                  | ESCP-18                            | Pruebas rápidas    |
 | ESC-15       | Mantenibilidad      | Agregación de nuevas funcionalidades a pedido de los usuarios                    | Actualizacion rapida y sin interrupciones          | ESCP-19, ESCP-35, ESCP-40          | Repetido           |
 | ESC-16       | Rendimiento         | Monitoreo de los usuarios                                                        | Sin interrupciones en la funcionalidad del sistema | ESCP-20                            | Monitoreo continuo |
