--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/04. Refinamiento.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/04. Refinamiento.md
@@ -1,20 +1,20 @@
 # Refinamiento
 
-| ID Escenario | Fuente Estímulo     | Estímulo                                                                         | Artefacto  | Entorno    | Respuesta                                         | Medida de Respuesta                                             |
-| ------------ | ------------------- | -------------------------------------------------------------------------------- | ---------- | ---------- | ------------------------------------------------- | --------------------------------------------------------------- |
-| ESC-02       | Carga del sistema   | Sincronizacion de datos entre el sistema y sistemas externos                     | Sistema    | Operativo  | Sincronización exitosa                            | Tiempo de sincronización menor de 5 seg                         |
-| ESC-04       | Usuarios            | Intento de Accesos de Usuario a Cuenta de Otro Usuario                           | Sistema    | Operativo  | Bloquear el acceso                                | Porcentaje de intentos no autorizados bloqueados >99.9%         |
-| ESC-15       | Requerimientos      | Agregación de nuevas funcionalidades a pedido de los usuarios                    | Sistema    | Desarrollo | Actualización rápida y sin interrupciones         | Tiempo de implementación menor a 3 horas                        |
-| ESC-17       | Administrador       | Baneo de usuarios que no sigan los términos y condiciones                        | Sistema    | Operativo  | Restringir el acceso de los usuarios              | Tiempo de restricción luego de incumplir la norma menor a 5 min |
-| ESC-18       | Usuarios            | El envío de archivos debe ser prioritario sobre los mensajes                     | Sistema    | Operativo  | Envío de archivos rápido                          | Tiempo de envío menor a 5 segundos                              |
-| ESC-19       | Sistema             | Identificación de usuarios con comportamientos sospechosos                       | Sistema    | Operativo  | Manejo de usuarios con actividades dudosas        | Porcentaje de usuarios sospechosos identificados >75%           |
-| ESC-20       | Usuarios            | Gran volumen de mensajes enviados simultáneamente                                | Sistema    | Operativo  | El sistema sigue funcionando normalmente          | Tiempo de respuesta menor a 1 seg                               |
-| ESC-21       | Requerimientos      | La plataforma debe adaptarse a los requerimientos que se tenga en la universidad | Plataforma | Operativo  | La plataforma se ajusta sin problemas             | Tiempo de ajuste menor a 5 horas                                |
-| ESC-23       | Usuarios            | Incapacidad para iniciar sesión                                                  | Sistema    | Operativo  | Restauración pronta del servicio                  | Tiempo de restauración menor a 1 hora                           |
-| ESC-24       | Desarrolladores     | Desarrollo de código comprensible y anotado                                      | Código     | Desarrollo | Código que evoluciona fácilmente                  | Complejidad ciclomática                                         |
-| ESC-25       | Usuarios            | Protección de accesos ante usuarios que usen SSO                                 | Sistema    | Operativo  | Accesos seguros                                   | Porcentaje de accesos seguros a usuarios con SSO mayor a 99%    |
-| ESC-26       | Ataque              | Explotación de una debilidad                                                     | Sistema    | Operativo  | Mitigación del ataque                             | Tiempo de mitigación menor a 1 hora                             |
-| ESC-27       | Sistema             | Protección contra alteraciones en los mensajes                                   | Sistema    | Operativo  | Mensajes enviados se mantienen inalterados        | Porcentaje de mensajes inalterados mayor a 99.9%                |
-| ESC-28       | Sistema             | Falta de disponibilidad de recursos externos                                     | Sistema    | Operativo  | Restauración de recursos externos                 | Tiempo de restauración menor a 1 hora                           |
-| ESC-29       | Canal de mensajeria | Preservación de la integridad de los archivos enviados                           | Sistema    | Operativo  | Mantenimiento del estado original de los archivos | Porcentaje de archivos inalterados mayor a 99.9%                |
-| ESC-31       | Administrador       | Necesidad de Actualización de la Plataforma                                      | Plataforma | Desarrollo | Actualizaciones sencillas                         | Tiempo de actualización menor de 2 horas                        |
+| ID Escenario | Fuente Estímulo   | Estímulo                                                      | Artefacto                | Entorno    | Respuesta                                          | Medida de Respuesta                                                    |
+| ------------ | ----------------- | ------------------------------------------------------------- | ------------------------ | ---------- | -------------------------------------------------- | ---------------------------------------------------------------------- |
+| ESC-02       | Carga del sistema | Sincronizacion de datos entre el sistema y sistemas externos  | Sistema                  | Operativo  | Sincronización exitosa                             | Tiempo de sincronización menor de 5 seg                                |
+| ESC-04       | Usuarios          | Intento de Accesos de Usuario a Cuenta de Otro Usuario        | Sistema                  | Operativo  | Bloquear el acceso                                 | Porcentaje de intentos no autorizados bloqueados >99.9%                |
+| ESC-06       | Usuarios          | Envío de información delicada                                 | Sistema de mensajes      | Operativo  | Cifrado de la informacion                          | Cantidad de información filtrada menor a 0.1%                          |
+| ESC-09       | Administrador     | Consulta de la información de usuarios                        | Módulo de administracion | Operativo  | Respuesta rápida del sistema                       | Tiempo de respuesta menor a 3 seg                                      |
+| ESC-10       | Usuarios          | Acceso del nuevo usuario a utilizar el sistema                | Sistema                  | Operativo  | El sistema muestra una interfaz sencilla de usar   | Satisfaccion de usuario mayor al 90%                                   |
+| ESC-13       | Usuarios          | Enviar mensajes entre los usuarios                            | Módulo de mensajes       | Operativo  | El sistema confirma el envío y lectura del mensaje | Tasa de éxito en la entrega superior a 99.9%                           |
+| ESC-15       | Requerimientos    | Agregación de nuevas funcionalidades a pedido de los usuarios | Sistema                  | Desarrollo | Actualización rápida y sin interrupciones          | Tiempo de implementación menor a 3 horas                               |
+| ESC-17       | Administrador     | Baneo de usuarios que no sigan los términos y condiciones     | Sistema                  | Operativo  | Restringir el acceso de los usuarios               | Tiempo de restricción luego de incumplir la norma menor a 5 min        |
+| ESC-18       | Usuarios          | El envío de archivos debe ser prioritario sobre los mensajes  | Sistema                  | Operativo  | Envío de archivos rápido                           | Tiempo de envío menor a 5 segundos                                     |
+| ESC-19       | Sistema           | Identificación de usuarios con comportamientos sospechosos    | Sistema                  | Operativo  | Manejo de usuarios con actividades dudosas         | Porcentaje de usuarios sospechosos identificados >75%                  |
+| ESC-20       | Usuarios          | Gran volumen de mensajes enviados simultáneamente             | Sistema                  | Operativo  | El sistema sigue funcionando normalmente           | Tiempo de respuesta menor a 1 seg                                      |
+| ESC-22       | Sistema           | Envío de archivos maliciosos                                  | Sistema                  | Operativo  | Bloqueo de archivos peligrosos                     | Cantidad de archivos maliciosos que ingresaron al sistema menor a 0.1% |
+| ESC-23       | Usuarios          | Incapacidad para iniciar sesión                               | Sistema                  | Operativo  | Restauración pronta del servicio                   | Tiempo de restauración menor a 1 hora                                  |
+| ESC-25       | Usuarios          | Protección de accesos ante usuarios que usen SSO              | Sistema                  | Operativo  | Accesos seguros                                    | Porcentaje de accesos seguros a usuarios con SSO mayor a 99%           |
+| ESC-27       | Sistema           | Protección contra alteraciones en los mensajes                | Sistema                  | Operativo  | Mensajes enviados se mantienen inalterados         | Porcentaje de mensajes inalterados mayor a 99.9%                       |
+| ESC-28       | Sistema           | Falta de disponibilidad de recursos externos                  | Sistema                  | Operativo  | Restauración de recursos externos                  | Tiempo de restauración menor a 1 hora                                  |
