--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/03. Priorizacion.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/03. Priorizacion.md
@@ -10,20 +10,39 @@
 
 | Stakeholder \\ Escenario | ESC-01 | ESC-02 | ESC-03 | ESC-04 | ESC-05 | ESC-06 | ESC-07 | ESC-08 | ESC-09 | ESC-10 | ESC-11 | ESC-12 | ESC-13 | ESC-14 | ESC-15 | ESC-16 | ESC-17 | ESC-18 | ESC-19 | ESC-20 | ESC-21 | ESC-22 | ESC-23 | ESC-24 | ESC-25 | ESC-26 | ESC-27 | ESC-28 | ESC-29 | ESC-30 | ESC-31 |
 | ------------------------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ | ------ |
-| STK-01                   | 1      | 1      |        | 2      |        |        |        |        |        | 1      |        |        | 1      |        |        |        | 1      | 1      |        |        | 1      |        | 1      |        |        |        |        |        | 1      |        |        |
-| STK-02                   |        | 1      |        | 1      |        |        |        | 1      |        |        | 1      |        |        |        | 1      |        | 2      |        | 1      | 2      |        |        |        | 2      | 1      |        | 1      |        |        |        | 1      |
-| STK-03                   |        | 1      |        |        |        |        |        |        |        |        |        |        |        |        | 2      |        | 1      | 1      |        |        | 1      |        | 1      | 1      |        | 2      |        | 2      |        |        | 3      |
-| STK-04                   | 1      | 2      |        |        |        |        |        |        |        | 1      |        |        |        |        | 1      |        |        | 1      | 1      | 1      |        |        |        |        | 2      |        | 3      |        | 2      |        |        |
-| STK-05                   |        | 1      |        | 1      |        |        |        |        |        |        |        | 1      |        | 2      | 1      |        | 1      |        | 1      |        | 2      |        | 2      |        |        | 2      |        | 1      |        |        |        |
-| STK-06                   |        |        | 1      |        |        |        |        |        |        |        |        |        |        |        |        |        |        | 2      | 2      |        |        |        | 1      | 3      | 1      |        | 1      | 1      | 1      |        | 2      |
-| STK-07                   |        | 1      |        | 1      |        |        |        |        |        |        |        |        |        |        | 2      |        |        |        | 3      | 1      |        |        | 1      |        | 1      |        | 1      | 2      | 2      |        |        |
-| STK-08                   | 1      |        |        | 2      |        |        | 1      |        |        |        |        | 1      |        |        |        |        |        | 1      |        | 2      | 2      |        |        |        |        | 3      |        | 1      |        |        | 1      |
-| STK-09                   |        |        |        | 1      |        |        |        |        |        |        |        |        |        |        | 1      |        | 3      | 3      |        |        | 2      |        |        |        | 2      |        | 2      | 1      |        |        |        |
-| STK-10                   |        | 1      |        | 1      |        |        |        |        |        |        |        |        |        |        |        |        | 1      | 1      |        | 3      |        |        | 2      | 1      | 1      |        | 1      |        | 3      |        |        |
+| STK-01                   | 1      | 1      |        | 2      |        | 1      |        |        |        | 1      |        |        | 2      |        |        |        | 1      | 1      | 2      | 1      | 2      |        |        |        |        |        |        |        |        |        |        |
+| STK-02                   |        | 1      |        | 2      |        | 2      |        | 1      | 1      |        | 1      |        | 1      |        | 1      |        |        |        | 1      | 1      |        | 1      |        |        |        |        | 2      |        |        |        |        |
+| STK-03                   |        | 1      |        |        |        |        |        |        |        | 1      |        |        |        |        | 2      |        | 2      | 2      |        |        | 2      |        | 1      |        |        |        | 2      | 1      |        |        | 1      |
+| STK-04                   |        | 2      |        |        |        | 1      |        |        | 2      | 1      |        |        | 1      |        | 2      |        |        |        | 1      | 1      |        |        | 2      |        | 1      |        |        |        | 1      |        |        |
+| STK-05                   |        |        |        | 1      |        |        |        |        | 1      |        |        | 1      |        | 1      | 1      |        |        | 2      |        | 1      | 1      | 2      |        |        | 1      |        | 1      | 2      |        |        |        |
+| STK-06                   |        |        | 1      |        |        | 1      |        |        | 2      | 1      |        |        | 1      |        |        |        | 1      |        | 1      | 1      | 1      |        | 2      |        | 2      |        |        | 1      |        |        |        |
+| STK-07                   |        | 1      |        | 1      | 1      |        |        |        | 2      |        |        |        |        |        | 2      |        | 2      | 1      |        | 1      | 1      |        |        |        | 1      |        | 1      | 1      |        |        |        |
+| STK-08                   | 1      |        |        | 2      |        | 1      | 1      |        |        |        |        | 1      | 2      |        |        |        |        |        | 1      | 1      |        | 2      | 1      |        | 1      |        | 1      |        |        |        |        |
+| STK-09                   |        |        |        | 1      |        |        |        |        |        | 1      |        |        | 1      |        | 1      |        | 1      | 2      |        | 1      |        | 1      | 2      |        | 1      |        | 1      | 1      |        | 1      |        |
+| STK-10                   |        | 1      |        | 1      |        | 1      |        |        | 1      | 2      |        |        |        |        |        |        | 1      | 1      | 2      | 1      | 1      | 1      |        |        | 1      |        |        | 1      |        |        |        |
 
 ---
 
+## Escenarios priorizados
+
 | Escenarios Priorizados |     |
+| ---------------------- | --- |
+| ESC-02                 | 7   |
+| ESC-04                 | 10  |
+| ESC-06                 | 7   |
+| ESC-09                 | 9   |
+| ESC-10                 | 7   |
+| ESC-13                 | 8   |
+| ESC-15                 | 9   |
+| ESC-17                 | 8   |
+| ESC-18                 | 9   |
+| ESC-19                 | 8   |
+| ESC-20                 | 9   |
+| ESC-22                 | 7   |
+| ESC-23                 | 8   |
+| ESC-25                 | 8   |
+| ESC-27                 | 8   |
+| ESC-28                 | 7   |
 | ---------------------- | --- |
 | ESC-04                 | 9   |
 | ESC-20                 | 9   |
