Cambios en los drivers de calidad

--- a/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/04. Refinamiento.md
+++ b/Partes del Indice/6. Workshop de Atributos de Calidad - QAW/04. Refinamiento.md
@@ -4,7 +4,7 @@
 | ------------ | ----------------- | ------------------------------------------------------------- | ------------------------ | ---------- | -------------------------------------------------- | ---------------------------------------------------------------------- |
 | ESC-02       | Carga del sistema | Sincronizacion de datos entre el sistema y sistemas externos  | Sistema                  | Operativo  | Sincronización exitosa                             | Tiempo de sincronización menor de 5 seg                                |
 | ESC-04       | Usuarios          | Intento de Accesos de Usuario a Cuenta de Otro Usuario        | Sistema                  | Operativo  | Bloquear el acceso                                 | Porcentaje de intentos no autorizados bloqueados >99.9%                |
-| ESC-06       | Usuarios          | Envío de información delicada                                 | Sistema de mensajes      | Operativo  | Cifrado de la informacion                          | Cantidad de información filtrada menor a 0.1%                          |
+| ESC-06       | Usuarios          | Envío de información delicada                                 | Módulo de ingreso        | Operativo  | Cifrado de la informacion                          | Cantidad de información filtrada menor a 0.1%                          |
 | ESC-09       | Administrador     | Consulta de la información de usuarios                        | Módulo de administracion | Operativo  | Respuesta rápida del sistema                       | Tiempo de respuesta menor a 3 seg                                      |
 | ESC-10       | Usuarios          | Acceso del nuevo usuario a utilizar el sistema                | Sistema                  | Operativo  | El sistema muestra una interfaz sencilla de usar   | Satisfaccion de usuario mayor al 90%                                   |
 | ESC-13       | Usuarios          | Enviar mensajes entre los usuarios                            | Módulo de mensajes       | Operativo  | El sistema confirma el envío y lectura del mensaje | Tasa de éxito en la entrega superior a 99.9%                           |
